--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -1,5 +1,6 @@
-extends layout
+
+  extends layout
 
 block content
-  h1= The intresting fact about me is that I am obsessed with cleanliness However I love to play in rainpug
-  p Welcome to #{The intresting fact about me is that I am obsessed with cleanliness However I love to play in rain}
+  h1= "{ "+ title +" }"
+  p The intresting fact about me is that I am obsessed with cleanliness However I love to play in rain #{'{ '+title +' }'}
